--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,34 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
+
+/* universal selector */
+* {
+    margin: 0;
+    padding: 0;
+    /* box-sizing changes the box model so that the borders and paddings are no longer added to the total width or the total height that we specify for a box */
+    box-sizing: border-box;
+}
+
+/* setting overal font properties. we do it in body because the properties related to font are usually inherited */
+body {
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    /* 1.7x bigger than predefined line height */
+    line-height: 1.7;
+    color: #777;
+    padding: 30px
+}
+
+.header {
+    height: 95vh;
+    background-image: linear-gradient(
+        to right bottom,
+        rgba(128, 214, 113, 0.8), 
+        rgba(39, 180, 133, 0.8)), 
+        url(../img/hero.jpg);
+    background-size: cover;
+    background-position: top;
+    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+}
