--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,9 @@
-/*
-COLORS:
+$color-primary: #55c57a;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
+$color-grey-dark: #777;
+$color-white: #fff;
 
 /* universal selector */
 *,
@@ -27,7 +25,7 @@ body {
   /* font-size: 16px; */
   /* 1.7x bigger than predefined line height */
   line-height: 1.7;
-  color: #777;
+  color:$color-grey-dark;
   padding: 3rem;
   /* box-sizing changes the box model so that the borders and paddings are no longer added to the total width or the total height that we specify for a box */
   box-sizing: border-box;
@@ -37,8 +35,8 @@ body {
   height: 95vh;
   background-image: linear-gradient(
       to right bottom,
-      rgba(128, 214, 113, 0.8),
-      rgba(39, 180, 133, 0.8)
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)
     ),
     url(../img/hero.jpg);
   background-size: cover;
@@ -66,7 +64,7 @@ body {
 }
 
 .heading-primary {
-  color: #fff;
+  color:$color-white;
   text-transform: uppercase;
   backface-visibility: hidden;
   margin-bottom: 6rem;
@@ -162,8 +160,8 @@ body {
 }
 
 .btn--white {
-  background-color: #fff;
-  color: #777;
+  background-color: $color-white;
+  color: $color-grey-dark;
 }
 
 .btn::after {
@@ -180,7 +178,7 @@ body {
 }
 
 .btn--white::after {
-    background-color: #fff;
+    background-color: $color-white;
 }
 
 .btn:hover::after {
