--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -28,3 +28,10 @@
   padding: 25rem 0 15rem 0;
   margin-top: -11rem;
 }
+
+.section-stories {
+  padding: 15rem 0;
+  background-color: $color-grey-light-1;
+}
+
+
