--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,8 +14,10 @@ $color-grey-light-2: #eee;
 
 $color-grey-dark: #777;
 $color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
+
 $color-white: #fff;
-$color-black: #000;
+$color-black: rgb(39, 39, 39);
 
 // font
 $default-font-size: 1.6rem;
