--- a/css/style.css
+++ b/css/style.css
@@ -627,7 +627,8 @@ body {
 
 .navigation__icon {
   position: relative;
-  margin-top: 3.5rem; }
+  margin-top: 3.5rem;
+  background-color: #333; }
   .navigation__icon, .navigation__icon::before, .navigation__icon::after {
     width: 3rem;
     height: 2px;
