--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,7 +9,19 @@
 
 html {
   // defines 1rem
-  font-size: 62.5%;
+  font-size: 62.5%; //1rem = 10px; 10px/16px = 62.5%
+
+  @include respond(tap-land) {
+    font-size: 56.25% //1rem = 9px; 9px/16px = 56.25%
+  }
+
+  @include respond(tap-port) {
+    font-size: 50% //1rem = 8px; 8px/16px = 50%
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75% //1rem = 12px; 12px/16px = 75%
+  }
 }
 
 /* setting overal font properties. we do it in body because the properties related to font are usually inherited */
