--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ breakpoint argument choices:
 -tab-land
 -big-desktop
 
+Order: Base + Typography > general layout + grid > page layout > components
+
 1em = 16px
 */
 @keyframes moveInLeft {
@@ -58,7 +60,8 @@ html {
 /* setting overal font properties. we do it in body because the properties related to font are usually inherited */
 body {
   /* box-sizing changes the box model so that the borders and paddings are no longer added to the total width or the total height that we specify for a box */
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding: 3rem; }
 
 /* setting overal font properties. we do it in body because the properties related to font are usually inherited */
 body {
@@ -67,8 +70,7 @@ body {
   /* font-size: 16px; */
   /* 1.7x bigger than predefined line height */
   line-height: 1.7;
-  color: #777;
-  padding: 3rem; }
+  color: #777; }
 
 .heading-primary {
   color: #fff;
