--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,20 +9,24 @@
 
 html {
   // defines 1rem
-  font-size: 62.5%; //1rem = 10px; 10px/16px = 62.5%
+  font-size: 62.5%; 
+  //1rem = 10px; 10px/16px = 62.5%
 
-  @include respond(tap-land) {
-    font-size: 56.25% //1rem = 9px; 9px/16px = 56.25%
+  @include respond(tabland) {
+    font-size: 56.25%; 
+    //1rem = 9px; 9px/16px = 56.25%
   }
 
-  @include respond(tap-port) {
-    font-size: 50% //1rem = 8px; 8px/16px = 50%
+  @include respond(tabport) {
+    font-size: 50%; 
+    //1rem = 8px; 8px/16px = 50%
   }
   // the later will media query will be applied
   // order is very important
 
-  @include respond(big-desktop) {
-    font-size: 75% //1rem = 12px; 12px/16px = 75%
+  @include respond(bigdesktop) {
+    font-size: 75%; 
+    //1rem = 12px; 12px/16px = 75%
   }
 }
 
@@ -32,7 +36,7 @@ body {
   box-sizing: border-box;
   padding: 3rem;
 
-  @include respond(tap-port) {
+  @include respond(tabport) {
     padding: 0;
   }
 }
