--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,12 @@ Order: Base + Typography > general layout + grid > page layout > components
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
   @media (min-width: 112.5em) {
     html {
       font-size: 75%; } }
@@ -62,6 +68,9 @@ body {
   /* box-sizing changes the box model so that the borders and paddings are no longer added to the total width or the total height that we specify for a box */
   box-sizing: border-box;
   padding: 3rem; }
+  @media (max-width: 56.25em) {
+    body {
+      padding: 0; } }
 
 /* setting overal font properties. we do it in body because the properties related to font are usually inherited */
 body {
@@ -87,6 +96,10 @@ body {
     animation-timing-function: ease-out;
     /* animation-delay: 2s;
         animation-iteration-count: 2; */ }
+    @media (max-width: 37.5em) {
+      .heading-primary--main {
+        letter-spacing: 1rem;
+        font-size: 5rem; } }
   .heading-primary--sub {
     display: block;
     font-size: 2rem;
@@ -95,6 +108,9 @@ body {
     animation-name: moveInRight;
     animation-duration: 1s;
     animation-timing-function: ease-out; }
+    @media (max-width: 37.5em) {
+      .heading-primary--sub {
+        letter-spacing: .5rem; } }
 
 .heading-secondary {
   font-size: 3.5rem;
@@ -105,7 +121,7 @@ body {
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: 2px;
-  transition: all .2s; }
+  transition: all 0.2s; }
   .heading-secondary:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(39, 39, 39, 0.2); }
