--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -37,15 +37,15 @@ Order: Base + Typography > general layout + grid > page layout > components
         @media (max-width: 37.5em) { @content }; // 600px
     }
 
-    @if $breakpoint == tabport {
+    @if $breakpoint == tab-port {
         @media (max-width: 56.25em) { @content }; // 900px
     }
 
-    @if $breakpoint == tabland {
+    @if $breakpoint == tab-land {
         @media (max-width: 75em) { @content }; // 1200px
     }
 
-    @if $breakpoint == bigdesktop {
+    @if $breakpoint == big-desktop {
         @media (min-width: 112.5em) { @content }; // 1800px
     }
 }
