--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -7,6 +7,10 @@
 }
 .u-margin-bottom-medium {
     margin-bottom: 4rem !important;
+
+    @include respond(tab-port) {
+        padding: 3rem !important;
+      }
 }
 
 .u-margin-bottom-big {
@@ -15,6 +19,10 @@
 
 .u-margin-top-big {
     margin-top: 8rem !important;
+
+    @include respond(tab-port) {
+        padding: 5rem !important;
+      }
 }
 
 .u-margin-top-huge {
