--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -4,23 +4,31 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba($color-black, .8);
+  background-color: rgba($color-black, 0.8);
   z-index: 2500;
   opacity: 0;
   visibility: hidden;
-  transition: all .3s;
+  transition: all 0.3s;
+
+  // gracful degradation
+  @supports (-webkit-backdrop-filter: blur(10px)) or
+    (backdrop-filter: blur(10px)) {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba($color-black, 0.3);
+  }
 
   &__content {
     @include abCenter;
     width: 75%;
     background-color: $color-white;
-    box-shadow: 0 2rem 4rem rgba($color-black, .2);
+    box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
     border-radius: 3px;
     display: table;
     overflow: hidden;
     opacity: 0;
-    transform: translate(-50%, -50%) scale(.25);
-    transition: all .4s .2s;
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all 0.4s 0.2s;
   }
 
   &__left {
@@ -78,7 +86,7 @@
       font-size: 3rem;
       text-decoration: none;
       display: inline-block;
-      transition: all .2s;
+      transition: all 0.2s;
       line-height: 1;
     }
 
