--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,49 +1,56 @@
 .header {
+  height: 85vh;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)
+    ),
+    url(../img/hero-small.jpg);
+  background-size: cover;
+  background-position: top;
+  position: relative;
+
+  // here we insert 0 0 in clip-path and -webkit-clip-path because it does not matter
+  // line 17 says: if clip-path or -webkit-clip-path is supported...then do the following
+  @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     height: 95vh;
+  }
+
+  // if resolution is higher than 192dpi (user using retina display or better) than use image that has higher quality
+  // use comma to add condition
+  @media (min-resolution: 192dpi) and (min-width: 37.5em),
+    (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    (min-width: 125em) {
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.8),
         rgba($color-primary-dark, 0.8)
       ),
-      url(../img/hero-small.jpg);
-    background-size: cover;
-    background-position: top;
-    position: relative;
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  
-    // if resolution is higher than 192dpi (user using retina display or better) than use image that has higher quality
-    // use comma to add condition
-    @media (min-resolution: 192dpi) and (min-width: 37.5em),
-           (min-width: 125em) {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-primary-light, 0.8),
-        rgba($color-primary-dark, 0.8)
-      ),
       url(../img/hero.jpg);
-    }
-
-    @include respond(phone) {
-      -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-    }
-
-    &__logo-box {
-      position: absolute;
-      top: 4rem;
-      left: 4rem;
-    }
-  
-    &__logo {
-      height: 3.5rem;
-    }
-  
-    &__text-box {
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-    }
   }
+
+  @include respond(phone) {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  }
+
+  &__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem;
+  }
+
+  &__logo {
+    height: 3.5rem;
+  }
+
+  &__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+}
