update minor changes

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -20,9 +20,9 @@
 
   // if resolution is higher than 192dpi (user using retina display or better) than use image that has higher quality
   // use comma to add condition
-  @media (min-resolution: 192dpi) and (min-width: 37.5em),
-    (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-    (min-width: 125em) {
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    only screen and (min-width: 125em) {
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.8),
